<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo2"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:backgroundTint="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/email"
        android:hint="@string/enter_email"
        android:textColorHint="@color/white"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textColor="@color/pink"
        android:backgroundTint="@color/white"
        android:layout_margin="30dp"/>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:text="@string/new_user_register"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>


</FrameLayout>